# MC_Assigment-3

Matrixpert/: README.md  settings.gradle.kts
Matrixpert/app/: CMakeLists.txt  build.gradle.kts
Matrixpert/app/src/androidTest/java/com/example/matrixpert/: ExampleInstrumentedTest.kt
Matrixpert/app/src/main/: AndroidManifest.xml
Matrixpert/app/src/main/cpp/: matrix_native.cpp
Matrixpert/app/src/main/java/com/example/matrixpert/: MainActivity.kt  MatrixOps.kt  MatrixScreen.kt
Matrixpert/app/src/main/java/com/example/matrixpert/ui/theme/: Color.kt  Theme.kt  Type.kt
Matrixpert/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
Matrixpert/app/src/test/java/com/example/matrixpert/: ExampleUnitTest.kt
Matrixpert/gradle/: libs.versions.toml
Matrixpert/gradle/wrapper/: gradle-wrapper.properties
WiLog/: README.md  settings.gradle.kts
WiLog/app/: build.gradle.kts
WiLog/app/src/androidTest/java/com/example/wilog/: ExampleInstrumentedTest.kt
WiLog/app/src/main/: AndroidManifest.xml
WiLog/app/src/main/java/com/example/wilog/: MainActivity.kt  WifiViewModel.kt
WiLog/app/src/main/java/com/example/wilog/model/: LocationData.kt
WiLog/app/src/main/java/com/example/wilog/navigation/: NavRoutes.kt
WiLog/app/src/main/java/com/example/wilog/storage/: LocationStorage.kt
WiLog/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
WiLog/app/src/test/java/com/example/wilog/: ExampleUnitTest.kt
WiLog/gradle/: libs.versions.toml
WiLog/gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
